--- a/trunk/android/LichVanNien_GalaxyTab/res/layout/picker.xml
+++ b/trunk/android/LichVanNien_GalaxyTab/res/layout/picker.xml
@@ -1,112 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llcontainer"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/halftransblack"
+    android:gravity="center">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:background="@drawable/halftransblack" android:id="@+id/llcontainer">
-<LinearLayout
- 
-  android:orientation="vertical" android:gravity="center_horizontal"
-  android:layout_width="500px" android:background="#000"
-  android:layout_marginTop="100px"
-  android:layout_height="wrap_content" android:id="@+id/llrootpicker">
+    <LinearLayout
+        android:id="@+id/llrootpicker"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#000"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" 
+        android:paddingLeft="10dip"
+    	android:paddingRight="10dip">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:gravity="center" >
 
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:gravity="center"
-		android:layout_marginTop="5px">
-		
-		<LinearLayout android:layout_width="100px" android:layout_height="115px"
-			android:orientation="vertical" android:gravity="center_horizontal">
-		
-			<Button android:background="@drawable/search_day_plus_button"
-				android:text="+" android:textColor="#fff" android:textSize="16px"
-				android:textStyle="bold" android:id="@+id/btnpd"
-				android:layout_width="fill_parent" android:layout_height="35px" />
-			<EditText android:layout_width="fill_parent" android:layout_height="0px"
-				android:text="16" android:layout_weight="2"
-				android:enabled="false" android:focusable="false"
-				android:digits="0123456789" android:singleLine="true" android:maxLength="2"
-				android:textSize="40px" android:background="#000000"
-				android:gravity="center" android:textColor="#fff" android:id="@+id/txtdate"/>
-			<Button android:background="@drawable/search_day_minus_button"
-				android:text="-" android:textColor="#fff" android:textSize="16px"
-				android:textStyle="bold" android:id="@+id/btnmd"
-				android:layout_width="fill_parent" android:layout_height="35px" />
-		</LinearLayout>
-		
-		<TextView android:layout_width="25px" android:layout_height="wrap_content"
-			android:textSize="56px" android:text="/" android:textStyle="bold"/>
-			
-		<LinearLayout android:layout_width="110px" android:layout_height="115px"
-			android:orientation="vertical" android:gravity="center_horizontal">
-			
-			<Button android:background="@drawable/search_month_plus_button"
-				android:text="+" android:textColor="#fff" android:textSize="16px"
-				android:textStyle="bold" android:id="@+id/btnpm"
-				android:layout_width="fill_parent" android:layout_height="35px"/>
-			<EditText android:layout_width="fill_parent" android:layout_height="0px"
-				android:text="03" android:layout_weight="2" 
-				android:enabled="false" android:focusable="false"
-				android:digits="0123456789" android:singleLine="true" android:maxLength="2"
-				android:paddingLeft="0px" android:selectAllOnFocus="true"
-				android:textSize="40px" android:background="#000000"
-				android:gravity="center" android:textColor="#fff" android:id="@+id/txtmonth"/>
-			<Button android:background="@drawable/search_month_minus_button"
-				android:text="-" android:textColor="#fff" android:textSize="16px"
-				android:textStyle="bold" android:id="@+id/btnmm"
-				android:layout_width="fill_parent" android:layout_height="35px"/>	
-		</LinearLayout>
-		<TextView android:layout_width="26px" android:layout_height="wrap_content"
-			android:textSize="56px" android:text="/" android:textStyle="bold"/>
-		<LinearLayout android:layout_width="175px" android:layout_height="115px"
-			android:orientation="vertical" android:gravity="center_horizontal">
-			
-			<Button android:background="@drawable/search_year_plus_button"
-				android:text="+" android:textColor="#fff" android:textSize="16px"
-				android:textStyle="bold" android:id="@+id/btnpy"
-				android:layout_width="fill_parent" android:layout_height="35px"/>
-			<EditText android:layout_width="fill_parent" android:layout_height="0px"
-				android:text="1987" android:layout_weight="2"
-				android:selectAllOnFocus="true" android:enabled="false" android:focusable="false"
-				android:digits="0123456789" android:singleLine="true" android:maxLength="4"
-				android:paddingLeft="0px" android:inputType="number"
-				android:textSize="40px" android:background="#000000"
-				android:gravity="center" android:textColor="#fff" android:id="@+id/txtyear"/>
-			<Button android:background="@drawable/search_year_minus_button"
-				android:text="-" android:textColor="#fff" android:textSize="16px"
-				android:textStyle="bold" android:id="@+id/btnmy"
-				android:layout_width="fill_parent" android:layout_height="35px"/>
-		</LinearLayout>
-	</LinearLayout>
-	<LinearLayout android:layout_width="fill_parent" android:layout_height="40px"
-		android:gravity="center" android:layout_marginTop="10px" android:orientation="vertical">
-		<Button android:id="@+id/btnamduong" android:layout_width="308px" 
-			android:layout_height="25px" android:background="@drawable/toogle_button"/>
-	    <LinearLayout android:layout_width="308px" android:layout_height="wrap_content"
-	    	android:layout_marginTop="-20px">
-	    
-	    	<TextView android:layout_width="0px" android:layout_height="wrap_content"
-	    		android:text="@string/amlich" android:textColor="#888"
-	    		android:layout_weight="1" android:gravity="center"
-	    		android:textSize="14px" android:textStyle="bold"/>
-	    	<TextView android:layout_width="0px" android:layout_height="wrap_content"
-	    		android:text="@string/duonglich" android:textColor="#888"
-	    		android:layout_weight="1" android:gravity="center"
-	    		android:textSize="14px" android:textStyle="bold"/>
-	    </LinearLayout>
-	</LinearLayout>
-	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
-	
-	<Button android:layout_width="142px" android:layout_height="50px" 
-		android:layout_marginTop="15px" android:layout_marginBottom="15px"
-		android:background="@drawable/btndarkgray" android:text="@string/timkiem"
-		android:textColor="#fff" android:id="@+id/btnsearch"
-		android:textStyle="bold"/>
-	<Button android:layout_width="142px" android:layout_height="50px" 
-		android:layout_marginTop="15px" android:layout_marginBottom="15px"
-		android:layout_marginLeft="5px"
-		android:background="@drawable/btndarkgray" android:text="@string/dong"
-		android:textColor="#fff" android:id="@+id/btnclose"
-		android:textStyle="bold"/>
-	</LinearLayout>
-</LinearLayout>
+            <LinearLayout
+                android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/btnpd"
+                    android:layout_width="fill_parent"
+                    android:layout_height="35dip"
+                    android:background="@drawable/search_day_plus_button"
+                    android:text="+"
+                    android:textColor="#fff"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/txtdate"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="2"
+                    android:background="#000000"
+                    android:digits="0123456789"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:maxLength="2"
+                    android:singleLine="true"
+                    android:text="16"
+                    android:textColor="#fff"
+                    android:textSize="40dip" />
+
+                <Button
+                    android:id="@+id/btnmd"
+                    android:layout_width="fill_parent"
+                    android:layout_height="35dip"
+                    android:background="@drawable/search_day_minus_button"
+                    android:text="-"
+                    android:textColor="#fff"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="25dip"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textSize="50dip"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/btnpm"
+                    android:layout_width="fill_parent"
+                    android:layout_height="35dip"
+                    android:background="@drawable/search_month_plus_button"
+                    android:text="+"
+                    android:textColor="#fff"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/txtmonth"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="2"
+                    android:background="#000000"
+                    android:digits="0123456789"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:maxLength="2"
+                    android:paddingLeft="0dip"
+                    android:selectAllOnFocus="true"
+                    android:singleLine="true"
+                    android:text="03"
+                    android:textColor="#fff"
+                    android:textSize="40dip" />
+
+                <Button
+                    android:id="@+id/btnmm"
+                    android:layout_width="fill_parent"
+                    android:layout_height="35dip"
+                    android:background="@drawable/search_month_minus_button"
+                    android:text="-"
+                    android:textColor="#fff"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="26dip"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textSize="50dip"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/btnpy"
+                    android:layout_width="fill_parent"
+                    android:layout_height="35dip"
+                    android:background="@drawable/search_year_plus_button"
+                    android:text="+"
+                    android:textColor="#fff"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/txtyear"
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="2"
+                    android:background="#000000"
+                    android:digits="0123456789"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="4"
+                    android:paddingLeft="0dip"
+                    android:selectAllOnFocus="true"
+                    android:singleLine="true"
+                    android:text="1987"
+                    android:textColor="#fff"
+                    android:textSize="40dip" />
+
+                <Button
+                    android:id="@+id/btnmy"
+                    android:layout_width="fill_parent"
+                    android:layout_height="35dip"
+                    android:background="@drawable/search_year_minus_button"
+                    android:text="-"
+                    android:textColor="#fff"
+                    android:textSize="16dip"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/btnamduong"
+                android:layout_width="fill_parent" android:layout_weight="1"
+                android:layout_height="0dip"
+                android:background="@drawable/toogle_button" />
+
+            <LinearLayout
+                android:layout_width="fill_parent" android:layout_weight="1"
+                android:layout_height="0dip"
+                android:layout_marginTop="-20dip" >
+
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/amlich"
+                    android:textColor="#888"
+                    android:textSize="14dip"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/duonglich"
+                    android:textColor="#888"
+                    android:textSize="14dip"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dip" >
+
+            <Button
+                android:id="@+id/btnsearch"
+                android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btndarkgray"
+                android:text="@string/timkiem"
+                android:textColor="#fff"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnclose"
+                android:layout_width="0dip" android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dip"
+                android:background="@drawable/btndarkgray"
+                android:text="@string/dong"
+                android:textColor="#fff"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
