--- a/trunk/android/Story/res/layout/main.xml
+++ b/trunk/android/Story/res/layout/main.xml
@@ -42,8 +42,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="dang doc chuong 222" 
-            android:background="@drawable/btn2"
+            android:background="@drawable/button2"
             android:textColor="#393939"
             android:textSize="10dip"
             android:paddingLeft="5dip"
