--- a/android/Story/res/layout/content.xml
+++ b/android/Story/res/layout/content.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/bg"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/llbg">"
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -52,11 +53,11 @@
                 android:id="@+id/content"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:text="day la noi dung chuong 1"
+                android:paddingBottom="80dip"
                 android:paddingLeft="30dip"
                 android:paddingRight="10dip"
                 android:paddingTop="10dip"
-                android:paddingBottom="80dip"
+                android:text="day la noi dung chuong 1"
                 android:textColor="#393939" />
         </ScrollView>
     </LinearLayout>
@@ -65,23 +66,23 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:weightSum="5"
         android:background="@drawable/bgbottom"
-        android:gravity="center_vertical" 
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:paddingLeft="15dip"
-        android:paddingRight="15dip">
+        android:paddingRight="15dip"
+        android:weightSum="5" >
 
         <Button
             android:id="@+id/btnprev"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/prev"
-            android:textStyle="bold" 
             android:background="@drawable/button1"
+            android:gravity="center"
+            android:text="@string/prev"
             android:textColor="#393939"
-            android:gravity="center"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="0dip"
@@ -93,11 +94,80 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/next"
-            android:textStyle="bold"
             android:background="@drawable/button1"
+            android:gravity="center"
+            android:text="@string/next"
             android:textColor="#393939"
-            android:gravity="center" />
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llmenu"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bgbottom"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:visibility="gone" >
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/btnday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/day"
+                android:gravity="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/btnnight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/night"
+                android:gravity="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/btnminus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/minus"
+                android:gravity="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/btnplus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/plus"
+                android:gravity="center" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
